make an add function

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -81,12 +81,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from nbdev_tutorial.core import add\n",
+    "add(1,1)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
