--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# core\n",
     "\n",
-    "> Fill in a module description here"
+    "> This module makes some basic functions."
    ]
   },
   {
@@ -35,7 +35,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def foo(): pass"
+    "def add(x,y):\n",
+    "    return x+y"
    ]
   },
   {
@@ -51,7 +52,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
